# nrf53-test

app/: Cargo.toml  memory.x
app/.cargo/: config.toml
app/src/: main.rs
net/: Cargo.toml  memory.x
net/src/: main.rs
shared_ram/: Cargo.toml
shared_ram/src/: lib.rs
