[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"
name = "nrf53-app"
version = "0.1.0"

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []


[dependencies]
cortex-m = { version = "0.7.3", features = ["inline-asm"] }
cortex-m-rt = "0.7.1"
nrf5340-app-pac = "0.11.0"
nrf5340-app-hal = "0.15.1"

shared_ram = { path = "../shared_ram" }

nrf53-lib = { path = "../../nrf53-lib" }

[profile.release]
debug = true
lto = true
